[Html/CSS] Improve Options UI. Buttons fixed on top so they are always visible, improve some visual design.

--- a/background_scripts/options_page/options_page.css
+++ b/background_scripts/options_page/options_page.css
@@ -1,5 +1,8 @@
+/*TODO: CSS needs cleanup! */
+
 body {
     font-family: Helvetica Neue, Helvetica, Arial;
+    margin: 0; padding: 0;
 }
 
 h1 {
@@ -9,25 +12,110 @@ h1 {
 
 textarea {
     padding: 0;
-    /*margin-top: 10px;*/
+    margin-top: 10px;
 }
 
+/* Adapted from twitter bootstrap button style */
 button {
-    height: 20px;
+    display: inline-block;
+    padding: 4px 12px;
+    margin-bottom: 0;
+    font-size: 13px;
+    line-height: 17px;
+    color: #333333 /*#eee*/;
+    text-align: center;
+    /*text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);*/
+    vertical-align: middle;
+    cursor: pointer;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 0px 0px inset, rgba(0, 0, 0, 0.0470588) 0px 1px 2px 0px;*/
+    background-color: /*#666*/ #e6e6e6;
+    background-image: linear-gradient(rgb(255, 255, 255), rgb(230, 230, 230));
+    /*background-position: 0px -15px;*/
+    background-repeat: repeat-x;    border: 1px solid #cccccc;
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    /*border-bottom-color: #b3b3b3;*/
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+button:hover {
+    /*color: #333333;*/
+    /*text-decoration: none;*/
+    /*background-position: 0 -15px;*/
+    /*-webkit-transition: background-position 0.1s linear;*/
+    /*-moz-transition: background-position 0.1s linear;*/
+    /*-o-transition: background-position 0.1s linear;*/
+    /*transition: background-position 0.1s linear;*/
+    background-color: #bbb;
 }
 
 #settings-container {
     margin: 0 auto;
-    display: table;
+    position: relative;
+    /*display: table;*/
+    /*margin-top: 20px;*/
 }
 
-#user-settings p , .message{
-    margin-left: 10px;
+#settings-header {
+    margin: 0 auto 20px auto;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    height: 40px;
+    width: 100%;
+    background-color: /*cadetblue*/ lightslategray;
+    /*margin: 0;*/
+    z-index: 2;
+    /*padding: 0 40px;*/
 }
+
+    #settings-header>h2 {
+        width: 750px;
+        margin: 0 auto;
+        padding: 0;
+        color: white;
+        /*text-align: right;*/
+        font-weight: normal;
+        vertical-align: middle;
+        font-size: 20px;
+        line-height: 40px;
+    }
+
+    #buttons-panel {
+        max-width: 750px;
+        margin: 10px auto;
+        position: relative;
+        top: -45px;
+    }
+
+#user-settings {
+    top: 60px;
+    position: relative;
+    margin: 0 auto;
+    width: 750px;
+
+}
+
+    .options-message {
+        color: #888;
+        font-size: 15px;
+    }
+
+    #options-main-message {
+        margin-bottom: 10px;
+        text-align: middle;
+    }
 
 #user-settings p {
-    margin-bottom: 5px;
-    font-style: italic;
+    /*margin-bottom: 5px;*/
+    /*font-style: italic;*/
+    font-family: Garamond "Times New Roman" SERIF;
+    font-weight: bold;
+    font-size: 15px;
+    margin: 0;
 }
 
 .message {
@@ -45,7 +133,7 @@ button {
 
 #user-settings textarea {
     border-color: #efefef;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     width: 750px;
     /*resize: none;*/
 }
@@ -55,7 +143,7 @@ button {
 }
 
 #settings-buttons-panel {
-    margin-bottom: 30px;
+    /*margin-bottom: 30px;*/
 }
 
 #save-settings{
@@ -68,11 +156,13 @@ button {
 
 /* TODO: To be improved. Just some CSS for now. */
 #user-message {
-    width: 500px;
+    box-sizing: border-box;
+    width: 400px;
     position:fixed;
     top:0;
+    /*left: 0;*/
     left: 50%;
-    margin-left: -250px;
+    margin-left: -375px;
     z-index: 1501;
     text-align: center;
 
@@ -102,7 +192,10 @@ button {
 }
 
 #user-message.success {
-    background-color: #3e801b;
+    background-color: #27805b;
     border: 1px solid #3e801b;
 }
 
+.fixer {
+    clear: both;
+}
